<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context="com.AlFurkan.Fragments.SebhaFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/sebha_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:background="@drawable/titles_shape"
            android:gravity="center_horizontal"
            android:padding="8dp"
            android:fontFamily="@font/almarai"
            android:text="@string/sebha"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="@dimen/titles_fs"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent=".8" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/sebha_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/sebha_title"
        android:layout_gravity="center"
        android:layout_alignStart="@id/sebha_title"
        android:layout_alignLeft="@id/sebha_title"
        android:layout_alignEnd="@id/sebha_title"
        android:layout_alignRight="@id/sebha_title"
        android:padding="4dp">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/sebha_bg"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent=".8"
            android:layout_marginTop="32dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:src="@drawable/reciters_dropdown_shape"
                    android:layout_gravity="center"/>

                <Spinner
                    android:id="@+id/azkar_spinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:minHeight="?android:attr/listPreferredItemHeight"
                    android:textAlignment="textEnd"
                    android:singleLine="false"
                    android:padding="16dp"
                    android:background="@android:color/transparent" />
            </LinearLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/minus_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/minus_shape"
                    android:layout_marginEnd="16dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/tasbeha_counter"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginRight="16dp" />

                <TextView
                    android:id="@+id/tasbeha_counter"
                    android:layout_width="0dp"
                    app:layout_constraintWidth_percent=".5"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:background="@drawable/tasbeh_btn_bg"
                    android:gravity="center"
                    android:paddingLeft="10dp"
                    android:paddingTop="20dp"
                    android:paddingRight="10dp"
                    android:paddingBottom="20dp"
                    android:text="1000"
                    android:textAlignment="center"
                    android:textColor="@color/main_color"
                    android:textSize="@dimen/tasbeh_num_fs"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/plus_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/plus_shape"
                    android:layout_marginStart="16dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/tasbeha_counter"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginLeft="16dp" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <at.markushi.ui.CircleButton
                android:id="@+id/counter_btn"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintWidth_percent=".7"
                app:layout_constraintHeight_percent=".84"
                android:layout_gravity="center"
                android:layout_margin="16dp"
                android:gravity="center"
                app:cb_pressedRingWidth="0dp"
                app:cb_color="@color/white"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/statistics_title_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/sebha_view"
        android:gravity="center_vertical|end"
        android:layout_marginTop="16dp"
        android:layout_marginRight="32dp">

        <ImageView
            android:id="@+id/dropdown_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/sebha_dropdown_down"
            android:layout_marginRight="32dp"
            android:layout_gravity="center"
            android:layout_marginEnd="16dp" />

        <TextView
            android:id="@+id/statistics_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/statistics"
            android:textColor="@color/black"
            android:textSize="@dimen/titles_fs"
            android:fontFamily="@font/almarai"
            android:padding="8dp" />

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/statistics_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/statistics_title_view"
        android:padding="16dp"
        android:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12pt"
            android:text="@string/total_tasbehat"
            android:textColor="@color/black"
            android:fontFamily="@font/almarai"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            tools:ignore="RelativeOverlap" />
        <TextView
            android:id="@+id/total_tasbeh_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12pt"
            android:text="300"
            android:textColor="@color/main_color"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true" />
    </RelativeLayout>

    </RelativeLayout>
</ScrollView>